--- a/css/uno.css
+++ b/css/uno.css
@@ -1655,7 +1655,7 @@ input[type="tel"] {
 				width: 25.8%; }
 
 	.content-wrapper {
-		width: 80%;
+		width: 85%;
 		max-width: none;
 		margin: 0 auto; }
 
